trying to fix word wrap with mathml

--- a/css/main.css
+++ b/css/main.css
@@ -446,7 +446,6 @@ STUFF FOR THE BLOG:
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
-	word-wrap: break-word;
 }
 
 #blog-post-brace{
